--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/Petrol.jpg);">
+    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/hinhmain.jpg);">
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <div id="logo">
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-md-7">
                         <!-- <div class="info_img bg-light">
-                            <img src="./assets/img/hinhmain.jpg" alt="background">
+                            <img src="./assets/img/1.jpg" alt="background">
                             <h4 class="text-center">I'm Phạm Minh Hoàng</h4>
                             <h5 class="career-info text-center">BACKEND DEVELOPER</h5>
                         </div> -->
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="myimg">
-                        <img src="./assets/img/Petrol.jpg" alt="">
+                        <img src="./assets/img/anhnen.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-5 position-relative">
