--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                     <div class="project lrcposay_project">
                         <img src="./assets/img/project_lrcposay.png" alt="hình ảnh web laroche posay vietnam">
                         <div class="project-info">
-                            <h4>larocheposay</h4>
+                            <h4>Cosmetic website</h4>
                             <p class="link text-success"><a href="https://hoangou01.github.io/larocheposay_hoang/"
                                     target="_blank"
                                     class="text-success">https://hoangou01.github.io/larocheposay_hoang/</a>
                             </p>
                             <p>công nghệ: </p>
-                            <p style="margin-top: -10px;">html5 , css , bootrap5 , javascript</p>
+                            <p style="margin-top: -10px;">html , css , bootrap5 , javascript</p>
                             <a href="https://github.com/hoangou01/larocheposay_hoang" target="_blank"
                                 class="button_sourcecode">source code</a>
                         </div>
@@ -211,7 +211,7 @@
                     <div class="project H&M_project">
                         <img src="./assets/img/Recruitment_project.png" alt="Recruitment project">
                         <div class="project-info">
-                            <h4>Job search website</h4>
+                            <h4>Recruitment website</h4>
                             <p class="link text-success"><a href="https://github.com/hoangou01/Recruitment-project"
                                     target="_blank"
                                     class="text-success">https://github.com/hoangou01/Recruitment-project</a>
