--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     target="_blank"
                                     class="text-success">https://hoangou01.github.io/larocheposay_hoang/</a>
                             </p>
-                            <p>công nghệ: </p>
+                            <p>Technologies: </p>
                             <p style="margin-top: -10px;">html , css , bootrap5 , javascript</p>
                             <a href="https://github.com/hoangou01/larocheposay_hoang" target="_blank"
                                 class="button_sourcecode">source code</a>
@@ -198,7 +198,7 @@
                             <p class="link text-success"><a href="https://hoangou01.github.io/myPortfolio/"
                                     target="_blank" class="text-success">https://hoangou01.github.io/myPortfolio/</a>
                             </p>
-                            <p>công nghệ: </p>
+                            <p>Technologies: </p>
                             <p style="margin-top: -10px;">html5 , css , bootrap5 , javascript</p>
                             <a href="https://github.com/hoangou01/myPortfolio" target="_blank"
                                 class="button_sourcecode">source code</a>
@@ -216,7 +216,7 @@
                                     target="_blank"
                                     class="text-success">https://github.com/hoangou01/Recruitment-project</a>
                             </p>
-                            <p>công nghệ: </p>
+                            <p>Technologies: </p>
                             <p style="margin-top: -10px;">html5 , css , bootrap5 , javascript , spring mvc</p>
                             <a href="https://github.com/hoangou01/Recruitment-project" target="_blank"
                                 class="button_sourcecode">source code</a>
@@ -234,7 +234,7 @@
                             <p class="link text-success"><a href="https://github.com/hoangou01/minesweeper" target="_blank"
                                     class="text-success">https://github.com/hoangou01/minesweeper</a>
                             </p>
-                            <p>công nghệ: </p>
+                            <p>Technologies: </p>
                             <p style="margin-top: -10px;">c# winform application , LinQ</p>
                             <a href="https://github.com/hoangou01/minesweeper" target="_blank"
                                 class="button_sourcecode">source code</a>
@@ -282,7 +282,7 @@
                             </svg></span>
                         <span>
                             <p>Location</p>
-                            <p>Tan Phu district , Ho Chi Minh city</p>
+                            <p>Tan Phu , Ho Chi Minh</p>
                         </span>
                     </li>
                 </ul>
