--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="myimg">
-                        <img src="./assets/img/anhnen.jpg" alt="">
+                        <img src="./assets/img/bg_black.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-5 position-relative">
