--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./assets/css/css.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <script src="https://smtpjs.com/v3/smtp.js">
-    </script>
-    <script src="index.js"></script>
+    <!-- <script src="https://smtpjs.com/v3/smtp.js">
+    </script> -->
+   
 
     <title>Phạm Minh Hoàng</title>
     <style>
@@ -437,15 +437,15 @@
     </script>
     <script>
         // function 
-        Email.send({
-            SecureToken: "C973D7AD-F097-4B95-91F4-40ABC5567812",
-            To: 'them@website.com',
-            From: "you@isp.com",
-            Subject: "This is the subject",
-            Body: "And this is the body"
-        }).then(
-            message => alert(message)
-        );
+        // Email.send({
+        //     SecureToken: "C973D7AD-F097-4B95-91F4-40ABC5567812",
+        //     To: 'them@website.com',
+        //     From: "you@isp.com",
+        //     Subject: "This is the subject",
+        //     Body: "And this is the body"
+        // }).then(
+        //     message => alert(message)
+        // );
     </script>
 </body>
 
