--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./assets/css/css.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <!-- <script src="https://smtpjs.com/v3/smtp.js">
-    </script> -->
-   
+    <script src="./assets/js/script.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init("wfEBZX3kxtF7rHJN3");
+        })();
+    </script>
+
 
     <title>Phạm Minh Hoàng</title>
     <style>
@@ -297,9 +303,45 @@
             </div>
 
         </div>
-        <div class="container reveal" id="contact_section">
+
+        <div class="container py-4 reveal" id="send_section">
             <h2>
                 Contact <span style="color: cadetblue;">Me</span>
+            </h2>
+            <!-- Bootstrap 5 starter form -->
+            <div id="contactForm">
+
+                <!-- Name input -->
+                <div class="mb-3">
+                    <!-- <label class="form-label" for="name">Name</label> -->
+                    <input class="form-control" id="name" type="text" placeholder="Name" />
+                </div>
+
+                <!-- Email address input -->
+                <div class="mb-3">
+                    <!-- <label class="form-label" for="emailAddress">Email Address</label> -->
+                    <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
+                </div>
+
+                <!-- Message input -->
+                <div class="mb-3">
+                    <!-- <label class="form-label" for="message">Message</label> -->
+                    <textarea class="form-control message_form" id="message" type="text"
+                        placeholder="Message"></textarea>
+                </div>
+
+                <!-- Form submit button -->
+                <div class="d-grid">
+                    <button class="btn btn-primary btn-lg btn_submit" onclick="sendEmailToMe(); reset();"
+                       type="submit" >Send</button>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="container reveal" id="contact_section">
+            <h2>
+                My <span style="color: cadetblue;">Info</span>
             </h2>
 
             <div class="contact_ul">
@@ -367,10 +409,14 @@
                 <div class="col-md-4 col-sm-12 col-xs-12 text-light">
                     <div class="email_name">
                         <h5 class="text-white">SEND ME AN EMAIL</h5>
-                        <form method="post">
+                        <div class="footer_form-email d-flex">
                             <input type="email" id="getEmail" class="input_email" placeholder="Email ...">
-                            <input type="button" value="Send Email" onclick="sendEmail()" />
-                        </form>
+                            <button class="footer_btn-sendEmail" onclick="sendEmail()">Send</button>
+                        </div>
+                        <!-- <form onsubmit="sendEmail(); reset(); return false;">
+                            <input type="email" id="getEmail" class="input_email" placeholder="Email ...">
+                            <button type="submit">send</button>
+                        </form> -->
                         <p class="text-white-50 footername">@2022 Pham Minh Hoang</p>
                     </div>
                 </div>
@@ -435,17 +481,40 @@
             $this.text(linkText);
         });
     </script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
     <script>
-        // function 
-        // Email.send({
-        //     SecureToken: "C973D7AD-F097-4B95-91F4-40ABC5567812",
-        //     To: 'them@website.com',
-        //     From: "you@isp.com",
-        //     Subject: "This is the subject",
-        //     Body: "And this is the body"
-        // }).then(
-        //     message => alert(message)
-        // );
+        function sendEmail() {
+            var params = {
+                from_name: "Pham Minh Hoang",
+                email_id: "hoangou01@gmail.com",
+                message: "Thanks for visiting my portfolio",
+                to_email: document.getElementById("getEmail").value,
+            }
+            emailjs.send("service_jpf7847", "template_1keklr7", params).then(function (res) {
+                alert("successfully , I'll send you a thank within a few second !");
+            });
+        }
+        function sendEmailToMe() {
+            var params = {
+                from_name: document.getElementById("name").value,
+                email_id: document.getElementById("emailAddress").value,
+                message: document.getElementById("message").value,
+                to_email: "hoangou01@gmail.com"
+            }
+            emailjs.send("service_jpf7847", "template_03q90zk", params).then(function (res) {
+                alert("send email succesfully !");
+            },function(error){
+                alert("send email unsuccesfully !");
+            });
+        }
+        function reset() {
+            document.getElementById("name").value = "";
+            document.getElementById("emailAddress").value = "";
+            document.getElementById("message").value = "";
+            document.getElementById("getEmail").value = "";
+
+        }
     </script>
 </body>
 
