--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 
-    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/hinhmain.jpg);">
+    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/thantai_picture1.jpg);">
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <div id="logo">
@@ -164,8 +164,8 @@
             <div class="row">
                 <div class="col-md-7 col-lg-7 col-sm-12 col-xs-12">
                     <div class="myimg">
-                        <img class="mying-img_blur" src="./assets/img/bg_black.jpg" alt="">
-                        <img class="mying-img_main" src="./assets/img/bg_black.jpg" alt="">
+                        <img class="mying-img_blur" src="./assets/img/thantai_picture2.jpg" alt="">
+                        <img class="mying-img_main" src="./assets/img/thantai_picture2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12">
