--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 
-    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/thantai_picture1.jpg);">
+    <div id="header" class="vertical-center custom-1" style="background-image: url(./assets/img/hinhmain.jpg);">
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <div id="logo">
