--- a/index.html
+++ b/index.html
@@ -301,6 +301,25 @@
                     </div>
                 </a>
             </div>
+            <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <a href="https://github.com/hoangou01/tiki_django" class="text-dark" target="_blank">
+                    <div class="project minesweeper">
+                        <img src="./assets/img/django_img.png" alt="">
+                        <div class="project-info">
+                            <h4>Ecommerce website</h4>
+
+                            <p class="link text-success"><a href="https://github.com/hoangou01/tiki_django"
+                                    target="_blank" class="text-success">https://github.com/hoangou01/tiki_django</a>
+                            </p>
+                            <p>Technologies: </p>
+                            <p style="margin-top: -10px;">React , django , oauth2</p>
+                            <a href="https://github.com/hoangou01/tiki_django" target="_blank"
+                                class="button_sourcecode">source code</a>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
 
         </div>
 
