--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                 <a href="https://github.com/hoangou01/tiki_django" class="text-dark" target="_blank">
                     <div class="project minesweeper">
-                        <img src="./assets/img/django_img.png" alt="">
+                        <img src="./assets/img/comment_tiki.png" alt="">
                         <div class="project-info">
                             <h4>Ecommerce website</h4>
 
