--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <div id="logo">
-                    <a href="#aboutme" id="">HOANG PHAM</a>
+                    <a href="#aboutme" id="">MINH HOANG</a>
                 </div>
 
                 <ul class="navbar-nav hide-Mobile">
